--- a/app/src/main/res/layout/activity_luggage.xml
+++ b/app/src/main/res/layout/activity_luggage.xml
@@ -200,9 +200,9 @@
         app:srcCompat="@drawable/ic_25245" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="209dp"
-        android:layout_height="32dp"
+        android:id="@+id/bubbles4"
+        android:layout_width="194dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
