--- a/app/src/main/res/layout/activity_blocks.xml
+++ b/app/src/main/res/layout/activity_blocks.xml
@@ -8,8 +8,6 @@
     android:orientation="vertical">
 
 
-
-
     <ImageButton
         android:id="@+id/x3"
         style="@android:style/Widget.ImageButton"
@@ -91,13 +89,13 @@
         android:layout_marginEnd="308dp"
         android:layout_marginRight="308dp"
         android:layout_marginBottom="91dp"
+        android:adjustViewBounds="true"
         android:background="@color/white"
+        android:maxWidth="10dp"
+        android:maxHeight="10dp"
         android:rotation="180"
         android:scaleType="fitXY"
         android:tint="@color/primary"
-        android:maxHeight="10dp"
-        android:maxWidth="10dp"
-        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,9 +119,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="205dp"
-        android:layout_height="53dp"
+        android:id="@+id/bubbles3"
+        android:layout_width="200dp"
+        android:layout_height="42dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -134,7 +132,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.874"
+        app:layout_constraintVertical_bias="0.867"
         app:srcCompat="@drawable/third" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <android.support.constraint.Constraints
+        android:id="@+id/constraints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <android.support.constraint.Constraints
+        android:id="@+id/constraints2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
