--- a/app/src/main/res/layout/activity_early.xml
+++ b/app/src/main/res/layout/activity_early.xml
@@ -115,9 +115,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="194dp"
-        android:layout_height="35dp"
+        android:id="@+id/bubbles5"
+        android:layout_width="158dp"
+        android:layout_height="26dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -129,7 +129,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.891"
+        app:layout_constraintVertical_bias="0.866"
         app:srcCompat="@drawable/fifth" />
 
 
